--- a/shader-demo/index.html
+++ b/shader-demo/index.html
@@ -54,10 +54,10 @@
 <script src="src/system.bundle.543e6.js" charset="utf-8"> </script>
 
 <!-- Import map -->
-<script src="src/import-map.ef3e9.json" type="systemjs-importmap" charset="utf-8"> </script>
+<script src="src/import-map.c2c22.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
-    System.import('./index.a9c8e.js').catch(function(err) { console.error(err); })
+    System.import('./index.55da5.js').catch(function(err) { console.error(err); })
 </script>
 
 </body>
