--- a/shader-demo/index.html
+++ b/shader-demo/index.html
@@ -57,7 +57,7 @@
 <script src="src/import-map.c2c22.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
-    System.import('./index.27c5a.js').catch(function(err) { console.error(err); })
+    System.import('./index.6d1ef.js').catch(function(err) { console.error(err); })
 </script>
 
 </body>
