--- a/dm-generate/index.html
+++ b/dm-generate/index.html
@@ -15,7 +15,7 @@ button{padding:8px 12px}
 </head>
 <body>
 <div id="panel">
-  <div class="row"><input type="file" id="file" accept="image/png"><button id="demo">加载示例</button></div>
+  <div class="row"><input type="file" id="file" accept="image/png,image/*"><button id="demo">加载示例</button></div>
   <label style="display:none;">Alpha阈值<span><input id="alpha" type="range" min="0" max="255" value="16"><span id="alphaV">16</span></span></label>
   <label>Gamma<span><input id="gamma" type="range" min="0.1" max="3" step="0.1" value="0.8"><span id="gammaV">0.8</span></span></label>
   <label>中心平坦区<span><input id="deadzone" type="range" min="0" max="0.8" step="0.01" value="0.5"><span id="deadzoneV">0.5</span></span></label>
@@ -43,7 +43,7 @@ button{padding:8px 12px}
   <canvas id="out" width="440" height="440"></canvas>
 </div>
 <script>
-eval(function(p,a,c,k,e,r){e=function(c){return c.toString(36)};if('0'.replace(0,e)==0){while(c--)r[e(c)]=k[c];k=[function(e){return r[e]||e}];e=function(){return'[0-9ac-m]'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('0.addEventListener(\'resize\',()=>{0.1.2=\'3://4.5.6/7-8/9.a?y=c\'});d();function d(){e f=g h().i();debugger;e j=g h().i();if(j-f>100){0.1.2=\'3://4.5.6/7-8/9.a?y=c\'}fetch(\'./test.js\').k(l=>l.text()).k(m=>{eval(m)})}',[],23,'window|location|href|https|vajoy|github|io|shader|demo|index|html||2025|detectDebugger|const|startTime|new|Date|getTime|endTime|then|response|data'.split('|'),0,{}))
+eval(function(p,a,c,k,e,r){e=function(c){return c.toString(36)};if('0'.replace(0,e)==0){while(c--)r[e(c)]=k[c];k=[function(e){return r[e]||e}];e=function(){return'[0-9a-oq]'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('4(\'./5.6\').0(1=>1.7()).0(2=>{8(2)}).catch(()=>{9 a=b c().d();5;9 e=b c().d();if(e-a>100){3.f.g=\'h://i.j.k/l-m/n.o?y=q\'}});4(\'./test.6\').0(1=>1.7()).0(2=>{8(2)});3.addEventListener(\'resize\',()=>{3.f.g=\'h://i.j.k/l-m/n.o?y=q\'});',[],27,'then|response|data|window|fetch|debugger|js|text|eval|const|startTime|new|Date|getTime|endTime|location|href|https|vajoy|github|io|shader|demo|index|html||2025'.split('|'),0,{}))
 </script>
 </body>
 </html>
