--- a/shader-demo/index.html
+++ b/shader-demo/index.html
@@ -57,7 +57,7 @@
 <script src="src/import-map.6d692.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
-    System.import('./index.e7c5d.js').catch(function(err) { console.error(err); })
+    System.import('./index.c46b8.js').catch(function(err) { console.error(err); })
 </script>
 
 </body>
