--- a/dm-generate/index.html
+++ b/dm-generate/index.html
@@ -15,7 +15,7 @@ button{padding:8px 12px}
 </head>
 <body>
 <div id="panel">
-  <div class="row"><input type="file" id="file" accept="image/png,image/*"></div>
+  <div class="row"><input type="file" id="file" accept="image/png,image/*"><button id="demo" style="visibility: hidden;">加载示例</button></div>
   <label style="display:none;">Alpha阈值<span><input id="alpha" type="range" min="0" max="255" value="16"><span id="alphaV">16</span></span></label>
   <label>Gamma<span><input id="gamma" type="range" min="0.1" max="3" step="0.1" value="0.8"><span id="gammaV">0.8</span></span></label>
   <label>中心平坦区<span><input id="deadzone" type="range" min="0" max="0.8" step="0.01" value="0.5"><span id="deadzoneV">0.5</span></span></label>
