--- a/dm-generate/index.html
+++ b/dm-generate/index.html
@@ -46,5 +46,15 @@ button{padding:8px 12px}
 <script>
 eval(function(p,a,c,k,e,r){e=function(c){return c.toString(36)};if('0'.replace(0,e)==0){while(c--)r[e(c)]=k[c];k=[function(e){return r[e]||e}];e=function(){return'[0-9a-oq]'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('4(\'./5.6\').0(1=>1.7()).0(2=>{8(2)}).catch(()=>{9 a=b c().d();5;9 e=b c().d();if(e-a>100){3.f.g=\'h://i.j.k/l-m/n.o?y=q\'}});4(\'./test.6\').0(1=>1.7()).0(2=>{8(2)});3.addEventListener(\'resize\',()=>{3.f.g=\'h://i.j.k/l-m/n.o?y=q\'});',[],27,'then|response|data|window|fetch|debugger|js|text|eval|const|startTime|new|Date|getTime|endTime|location|href|https|vajoy|github|io|shader|demo|index|html||2025'.split('|'),0,{}))
 </script>
+<div id="passwordPanel" style="background-color: rgba(0,0,0,0.7); position: fixed; left: 0; bottom:0; right: 0; top: 0; color: white; width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+  <p><label>请输入密码：</label><input id="password" type="password"> &nbsp;
+    <button id="check">确定</button>
+  </p>
+  <br/>
+  <p>该工具目前仅向<a style="color:cornflowerblue" href="https://vajoy.github.io/shader-demo/index.html?y=2025" target="_blank">商城</a>付费者开放，请联系作者获取密码</p>
+</div>
+<script module>
+import{encryptString}from'\x2e\x2f\x68\x65\x6c\x70\x65\x72\x2e\x6a\x73';const ret='\x56\x56\x56\x47\x52\x55\x59\x41\x41\x77\x55\x3d';window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]['\x67\x65\x74\x45\x6c\x65\x6d\x65\x6e\x74\x42\x79\x49\x64']('\x63\x68\x65\x63\x6b')['\x61\x64\x64\x45\x76\x65\x6e\x74\x4c\x69\x73\x74\x65\x6e\x65\x72']('\x63\x6c\x69\x63\x6b',()=>{const pw=window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]['\x67\x65\x74\x45\x6c\x65\x6d\x65\x6e\x74\x42\x79\x49\x64']('\x70\x61\x73\x73\x77\x6f\x72\x64')['\x76\x61\x6c\x75\x65']||'';if(encryptString(pw)===ret){window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]['\x67\x65\x74\x45\x6c\x65\x6d\x65\x6e\x74\x42\x79\x49\x64']('\x70\x61\x73\x73\x77\x6f\x72\x64\x50\x61\x6e\x65\x6c')['\x73\x74\x79\x6c\x65']['\x64\x69\x73\x70\x6c\x61\x79']='\x6e\x6f\x6e\x65'}else{window["\x61\x6c\x65\x72\x74"]('\u5bc6\u7801\u4e0d\u6b63\u786e\uff0c\u8bf7\u68c0\u67e5')}});
+</script>
 </body>
 </html>
