--- a/dm-generate/index.html
+++ b/dm-generate/index.html
@@ -47,7 +47,7 @@ button{padding:8px 12px}
 eval(function(p,a,c,k,e,r){e=function(c){return c.toString(36)};if('0'.replace(0,e)==0){while(c--)r[e(c)]=k[c];k=[function(e){return r[e]||e}];e=function(){return'[0-9a-oq]'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('4(\'./5.6\').0(1=>1.7()).0(2=>{8(2)}).catch(()=>{9 a=b c().d();5;9 e=b c().d();if(e-a>100){3.f.g=\'h://i.j.k/l-m/n.o?y=q\'}});4(\'./test.6\').0(1=>1.7()).0(2=>{8(2)});3.addEventListener(\'resize\',()=>{3.f.g=\'h://i.j.k/l-m/n.o?y=q\'});',[],27,'then|response|data|window|fetch|debugger|js|text|eval|const|startTime|new|Date|getTime|endTime|location|href|https|vajoy|github|io|shader|demo|index|html||2025'.split('|'),0,{}))
 </script>
 <div id="passwordPanel" style="background-color: rgba(0,0,0,0.7); position: fixed; left: 0; bottom:0; right: 0; top: 0; color: white; width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
-  <p><label>请输入密码：</label><input id="password" type="password"> &nbsp;
+  <p><label style="display: inline-block;">请输入密码：</label><input id="password" type="password"> &nbsp;
     <button id="check">确定</button>
   </p>
   <br/>
